# aggregate-drills

./: .gitignore  LICENSE  README.md  aggregate-drills.cabal  flake.nix
app/: Main.hs
app/AggregateDrills/: IO.hs
src/Data/: PracticeLog.hs
src/Database/: RunOutDrill.hs
test/: LibSpec.hs
